Requires:
~~~~~~~~~
- CPSDefault > 3.34.0
- CPSSchemas > 0.43.0
New features:
~~~~~~~~~~~~~
- Added the possibility for a widget to specify if it has a input area (ie for
  user input). Using information about a potential input area is important for
  accessibility: it is used to associate the widget label with a potential input
  area. To test this, just "click" on the "title" label of any CPS document
  layout and your pointer will jump to the user field.
Bug fixes:
~~~~~~~~~~
- #699: Use AddPortalContent instead of ModifyPortalContent to condition
  the display of the "New" action in sections and workspaces.
- added translations for the search_sort_results_by voc
- Removed the debian directory of this product since this product will never be
  packaged on its own as a Debian package.
- log_key variable definition was missing in CPSdocument/Extensions/upgrade.py
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- Fixed translation files through the CPSI18n/bin/fix_pos script.
- Modified some ZPT files so that they are valid XHTML 1.0 Strict. This is a
  work in progress to fix #773 "Using XHTML 1.0 Strict by default for CPS
  sites".
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Don't use strings for permission names in getDocumentTypes.
- Moved the computeContributors script to the CPSDefault.utils module.