@@ -22,6 +22,7 @@ Bug fixes:
 - Modified some ZPT files so that they are valid XHTML 1.0 Strict. This is a
   work in progress to fix #773 "Using XHTML 1.0 Strict by default for CPS
   sites".
+- Correctly reindex proxies in all cases after they have been modified.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Don't use strings for permission names in getDocumentTypes.
